--- a/ayu_dark_luke_says.toml
+++ b/ayu_dark_luke_says.toml
@@ -51,14 +51,14 @@
 "ui.menu" = { fg = "foreground", bg = "black" }
 "ui.menu.selected" = { bg = "gray", fg = "background" }
 "ui.selection" = { bg = "dark_gray" }
-"warning" = "yellow"
-"error" = { bg = "#340034" , fg = "red", modifiers = ["bold"] }
+"warning" = {fg = "white", modifiers = ["underlined"]} # This is the little dot on the left side of the screen!(but for compiler/linter warnings? could be a little different depending on you lang) You people need to name these things better! What the heck mans, it aint that hard. That why no one uses this goodgood tech. You make it to hard/inconvenient for normal people to use...
+"error" = { bg = "#340034" , fg = "deep_red", modifiers = ["underlined"] }
 "info" = { fg = "blue", modifiers = ["bold"] }
 "hint" = { fg = "blue", modifiers = ["bold"] }
 "diagnostic.hint" = { underline = { color = "blue", style="curl"} }
-"diagnostic.info"= { underline = { color = "blue", style="curl"} }
-"diagnostic.warning"= { underline = { color = "yellow", style="curl"} }
-"diagnostic.error"= { underline = { color = "red", style="curl"} }
+"diagnostic.info" = { underline = { color = "blue", style="curl"} }
+"diagnostic.warning" = { underline = { color = "green", style="curl"} }#e6ff00
+"diagnostic.error" = { underline = { color = "deep_red", style="curl"} }
 "ui.bufferline" = { fg = "gray", bg = "background" }
 "ui.bufferline.active" = { fg = "foreground", bg = "dark_gray" }
 "ui.debug" = { fg = "orange", bg = "background" }
